added avatar feature